# ConflictBasedSearch

./: .gitignore  CMakeLists.txt  README.md  interactive_cbs.py  map_32by32_obst204_agents10_ex0.yaml  map_5by5_obst_agents2.yaml  visualize.py
app/: main.cpp
include/cbs/: a_star.hpp  a_star_reexpansion_no_boost.hpp  a_star_weighted.hpp  cbs.hpp  common.hpp  controller.hpp  environment.hpp  location.hpp  neighbor.hpp  planresult.hpp  simulator.hpp  ui.hpp
maps/: corridor_test.yaml  corridor_test2.yaml  cross_map.yaml  map_10by10_slack_agents3.yaml  map_5by5_obst_agents4.yaml  map_7by7_obst_agents6.yaml  map_experiment.yaml  t_map.yaml  wide_corridor_test.yaml
src/: cbs.cpp  controller.cpp  main.cpp  simulator.cpp  ui.cpp
